--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,9 @@ ignore_missing_imports = True
 
 [mypy-django_filters.*]
 ignore_missing_imports = True
+
+[mypy-users.*]
+ignore_missing_imports = True
+
+[mypy-food.*]
+ignore_missing_imports = True
