--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,3 +15,6 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - ../backend/media/:/usr/share/nginx/html/media/ # TODO: set container
+      - ../backend/static/admin/:/usr/share/nginx/html/static/admin/ # TODO: set container
+      - ../backend/static/rest_framework/:/usr/share/nginx/html/static/rest_framework/ # TODO: set container
