--- a/mypy.ini
+++ b/mypy.ini
@@ -18,3 +18,9 @@ ignore_missing_imports = True
 
 [mypy-food.*]
 ignore_missing_imports = True
+
+[mypy-app.*]
+ignore_missing_imports = True
+
+[mypy-api.*]
+ignore_missing_imports = True
