--- a/mypy.ini
+++ b/mypy.ini
@@ -13,6 +13,9 @@ ignore_missing_imports = True
 [mypy-django_filters.*]
 ignore_missing_imports = True
 
+[mypy-reportlab.*]
+ignore_missing_imports = True
+
 [mypy-users.*]
 ignore_missing_imports = True
 
@@ -24,3 +27,4 @@ ignore_missing_imports = True
 
 [mypy-api.*]
 ignore_missing_imports = True
+
