--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,20 +1,49 @@
-version: '3.3'
-services:
+version: '3.8'
 
+services:
   frontend:
     build:
       context: ../frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - db_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  web:
+    image: hubhubhubhub/foodgram:latest
+    restart: always
+    volumes:
+      - static_data_admin:/app/static/admin/
+      - static_data_drf:/app/static/rest_framework/
+      - media_data:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
   nginx:
-    image: nginx:1.19.3
+    image: nginx:1.19.3-alpine
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - ../backend/media/:/usr/share/nginx/html/media/ # TODO: set container
-      - ../backend/static/admin/:/usr/share/nginx/html/static/admin/ # TODO: set container
-      - ../backend/static/rest_framework/:/usr/share/nginx/html/static/rest_framework/ # TODO: set container
+      - media_data:/usr/share/nginx/html/media/
+      - static_data_admin:/usr/share/nginx/html/static/admin/
+      - static_data_drf:/usr/share/nginx/html/static/rest_framework/
+    depends_on:
+      - web
+
+volumes:
+  db_data:
+  static_data_admin:
+  static_data_drf:
+  media_data:
+
