--- a/backend/.github/workflows/foodgram_workflow.yml
+++ b/backend/.github/workflows/foodgram_workflow.yml
@@ -20,6 +20,8 @@ jobs:
           pip install -r backend/requirements.txt
 
       - name: Run tests
+        env:
+          SECRET_KEY: secret
         run: |
           cd backend
           python manage.py test
