--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -19,9 +19,12 @@ jobs:
           python -m pip install --upgrade pip 
           pip install -r backend/requirements.txt
 
-      - name: Test django
+      - name: Run tests
+        env:
+          SECRET_KEY: secret
         run: |
-          python backend/manage.py test
+          cd backend
+          python manage.py test
 
 
   build_and_push_to_docker_hub:
@@ -46,47 +49,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./backend/
+          context: ../
+          dockerfile: ./backend/Dockerfile
           push: true
           tags: hubhubhubhub/foodgram:latest
-
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-
-    steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          script: |
-            sudo docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            sudo docker-compose stop
-            sudo docker-compose rm web
-            touch .env
-            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
-            echo MEDIA_URL=${{ secrets.MEDIA_URL }} >> .env
-            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            sudo docker-compose up -d 
-
-
-  send_message:
-    runs-on: ubuntu-latest
-    needs: deploy
-
-    steps:
-      - name: send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
