--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -66,6 +66,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ../
-          dockerfile: ./backend/Dockerfile
+          file: ./backend/Dockerfile
           push: true
           tags: hubhubhubhub/foodgram:latest
