github workflow buildx failed with /data not found

--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ../
+          context: ./
           file: ./backend/Dockerfile
           push: true
           tags: hubhubhubhub/foodgram:latest
